added smartTemplate to handle widget instance rendering

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -13,9 +13,7 @@ body, html
   font-family 'Helvetica', 'Arial'
   
 #wrapper
-  width 96em
-  margin 0 auto
-  margin-top 1em
+  margin 1em
     
 .widget
   float left
@@ -28,6 +26,7 @@ body, html
     padding 1em
     font-size 10pt
     border-bottom solid 1px rgba(255,255,255,0.5)
+    cursor move
   
   .content
     min-height 15em
