--- a/app/views/app.jade
+++ b/app/views/app.jade
@@ -5,12 +5,8 @@ html(lang: "en")
     title SocketSteam demo: Dashboard
   body
     #wrapper
-      .widget#widget_1
-        .title CPU load
-        .content
-          .load 0.87
-      .widget#widget_2
-        .title Random number
-        .content
-          .load 0.87
-        
+      #widgets
+        .widget.template
+          .title
+          .content
+            .load
