WIP - once again, so far so good

--- a/app/views/dialogs/dialog.jade
+++ b/app/views/dialogs/dialog.jade
@@ -1,5 +1,5 @@
-#dialogue
-  #heading
-    .title
-    .close ✖
-  
+.dialogue.template
+  .dialogue-heading
+    .dialogue-title
+    .dialogue-close ✖
+  .dialogue-content
