--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -3,6 +3,13 @@
 
 @import 'helpers'
 
+@font-face
+  font-family 'Droid Sans Mono' 
+  font-style normal 
+  font-weight 400
+  src local('Droid Sans Mono'), local('Droid-Sans-Mono'), url('/fonts/Droid_Sans_Mono/DroidSansMono.ttf') format('truetype')
+
+
 // Main
 
 body, html
@@ -58,10 +65,7 @@ body, html
       font-size 10pt
       cursor move
       text-align center
-    
-    .title.new
-      cursor pointer
- 
+     
     .button
       opacity 0
       -webkit-transition opacity 0.3s linear
@@ -97,59 +101,52 @@ body, html
   .content
     min-height 15em
     text-align center
-      
-form#Widget
-  padding 2em
-  position absolute
-  round 5px
-  display none
-  background white
-  margin 10%
-  width 70%
-  text-align center
-  padding 2% 5%
-  
+        
 #tabs
-  padding 1em
-  padding-bottom none
+  margin 2em
+  text-align center  
 
-#tabs .tab 
-  float: left
-  padding: 10px
-  font-size: 12pt
-  border: solid 1px #ccc
-  -webkit-border-top-right-radius: 5px
-  -webkit-border-top-left-radius: 5px
-  -moz-border-radius-topright: 5px
-  -moz-border-radius-topleft: 5px
-  border-top-right-radius: 5px
-  border-top-left-radius: 5px
-  background: #eee
-  margin-bottom: -1px
-  cursor: pointer
-  background: -moz-linear-gradient(100% 100% 90deg, #fff, #ccc)
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ccc)) 
-  color: #777
+  .tab 
+    padding: 5px
+    font-size: 12pt
+    border-left: solid 1px #555
+    border-right: solid 1px #555
+    background: #eee
+    cursor: pointer
+    vertical-gradient(#888, #555)
+    color: white
+    text-shadow 1px 1px 1px rgba(0,0,0,0.5)
+    display inline
+    font-weight bold
+    box-shadow 3px 3px 5px rgba(0,0,0,0.5)
 
-#tabs .tab:hover 
-  background: #fefefe  
+  .tab:first-child
+    round-corner(top, left, 5px)
+    round-corner(bottom, left, 5px)
+    border-left none
+    padding-left 10px
 
-#tabs .tab.active 
-  background: white
-  border-bottom: solid 1px white
+  .tab:last-child
+    round-corner(top, right, 5px)
+    round-corner(bottom, right, 5px)
+    border-right none
+    padding-right 10px
+
+  .tab:hover 
+    background: #3E4A70
+    vertical-gradient(#555, #222)
+
+  .tab.active 
+    background: #3E4A70
+    vertical-gradient(#555, #222)
 
 #tabContents 
-  clear: left
+  clear: both
   float: left
-  border: solid 1px #ccc
-  width: 94em
-  height: 40em
-  -webkit-border-radius: 5px
-  -webkit-border-top-left-radius: 0
-  -moz-border-radius: 5px
-  -moz-border-radius-topleft: 0
-  border-radius: 5px
-  border-top-left-radius: 0
+  width: 70em
+  margin 0em 0em 2em 5em
+  height: 30em
+  round 5px
 
 .tabContent 
   display: none
@@ -167,9 +164,9 @@ textarea.ide
   -moz-box-shadow: inset 3px 3px 5px rgba(0,0,0,0.5)
   -webkit-box-shadow: inset 3px 3px 5px rgba(0,0,0,0.5)
   box-shadow: inset 3px 3px 5px rgba(0,0,0,0.5)
-  border: none
-  padding: 1em
-  height: 24em
+  border none
+  padding 1em
+  height 18em
   -webkit-border-radius: 5px
   -moz-border-radius: 5px
   border-radius: 5px
@@ -186,21 +183,94 @@ textarea.ide
   bottom 0px
   width 100%
   height 100%
+      
+.dialogue
+  width 80em
+  margin 0 auto
+  margin-left 23%
+  margin-right 23%
+  top 10em
+  position absolute
+  z-index 2
   
-  #dialog
+  .dialogue-heading
+    float left
+    width 100%
+    background #222
+    vertical-gradient(#444,#222)
+    round-corner(top,left,10px)
+    round-corner(top,right,10px)
+    
+    .dialogue-title 
+      font-size 12pt
+      float left
+      left 10px
+      color white
+      text-shadow 1px 1px 1px black
+      padding 1em
+      font-weight bold
+      
+    .dialogue-close 
+      text-align center
+      padding 6px 8px 5px 7px
+      background #AA0000
+      vertical-gradient(red,#AA0000)
+      font-size 12pt
+      float right
+      margin-top 10px
+      margin-right 10px
+      color white
+      round 15px
+      text-shadow 1px 1px 1px black
+      border solid 2px white
+      cursor pointer
+      box-shadow 0px 1px 2px 2px rgba(0,0,0,0.3)
+  
+  .dialogue-content
     background white
-    round 10px
-    margin 20%
-    width 50%
-    text-align center
-    padding 5%
-    color #333
+    float left
+    clear left
+    width 100%
+    round-corner(bottom,left,10px)
+    round-corner(bottom,right,10px)
     
     p
+      text-align center
+      color #333
+      float left
+      padding 1em
       font-size 12pt
-      margin 1em
-      
-    code
-      font-family: 'Droid Sans Mono'
+    
+    a
+      text-align center
+      padding 1em
       font-size 12pt
-      color #739147 
+      float left
+      color #6D9741
+    
+    
+#theBoringBit
+  float left
+  padding 1em
+  width 98%
+  
+  
+  input[type='text']
+    float left
+    font-size 12pt
+    padding 5px
+    
+  input[type='submit']
+    float right
+    font-size 14pt
+    padding 5px
+    border none
+    round 5px
+    color white
+    cursor pointer
+    background #669224
+    vertical-gradient(#7ACC00, #628D21)
+    
+#theCoolBit
+  float left
+  clear left
