Fixed the CSS for the live preview

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -274,3 +274,7 @@ textarea.ide
 #theCoolBit
   float left
   clear left
+  
+#widget_preview
+  background url('/images/bg-trans.png'), url('/images/ios-linen.jpg')
+  background-repeat repeat, repeat
