--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -187,9 +187,6 @@ textarea.ide
 .dialogue
   width 80em
   margin 0 auto
-  margin-left 23%
-  margin-right 23%
-  top 10em
   position absolute
   z-index 2
   
@@ -200,6 +197,7 @@ textarea.ide
     vertical-gradient(#444,#222)
     round-corner(top,left,10px)
     round-corner(top,right,10px)
+    cursor move
     
     .dialogue-title 
       font-size 12pt
