--- a/app/views/dialogs/widgetForm.jade
+++ b/app/views/dialogs/widgetForm.jade
@@ -1,6 +1,6 @@
 form#widget
   #theBoringBit
-    input(type='text', name='title', placeholder='title')
+    input(type='text', name='title', placeholder='widget title')
     input(type='submit', value='Create')
   #theCoolBit
     #tabs
