Display the API url when editing a widget

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -276,3 +276,24 @@ textarea.ide
 #widget_preview
   background url('/images/bg-trans.png'), url('/images/ios-linen.jpg')
   background-repeat repeat, repeat
+
+.dialogue .dialogue-content .apiUrl
+  text-align center
+  color #333
+  font-size 10pt
+  float left
+  vertical-gradient(#fff,#ddd)
+  width 95.5%
+  padding 2%
+  margin 5px 0px 15px
+  round 5px
+  border solid 1px #ccc
+  
+  b
+    font-weight bold
+    padding-right 10px
+    
+  a
+    float none
+    padding 0px
+    font-size 10pt
