addeda super simple logo

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -32,6 +32,17 @@ body, html
 #widgets
   clear both
   float left
+
+
+#logo
+  text-transform uppercase
+  padding 1px 15px 0px 0px
+  font-size 20pt
+  float left
+  font-weight bold
+  text-shadow 1px 1px 1px rgba(0,0,0,0.5)
+  color white
+  
     
 #newWidget
   font-weight bold
