--- a/app/views/app.jade
+++ b/app/views/app.jade
@@ -8,6 +8,7 @@ html(lang: "en")
   body
     #wrapper
       #menu
+        #logo Dashboard
         #newWidget +
       #widgets
         .widget.template
