Made the jade file compatible with the latest version

--- a/app/views/app.jade
+++ b/app/views/app.jade
@@ -1,10 +1,10 @@
 !!! 5
-html(lang: "en")
+html(lang="en")
   head
     meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
     != SocketStream
     title SocketSteam demo: Dashboard
-    style(type:'text/css', id:'cssHolder')
+    style(type='text/css', id='cssHolder')
   body
     #wrapper
       #menu
@@ -14,6 +14,6 @@ html(lang: "en")
         .widget.template
           .heading
             .title
-            .button.delete(title:"Delete")
-            .button.config(title:"Configure")
+            .button.delete(title="Delete")
+            .button.config(title="Configure")
           .content
