added commercial ssl cert

--- a/app/views/app.jade
+++ b/app/views/app.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
     != SocketStream
-    title SocketSteam demo: Dashboard
+    title SocketStream demo: Dashboard
     style(type='text/css', id='cssHolder')
   body
     #wrapper
