--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -62,6 +62,7 @@ body, html
   background rgba(0,0,0,0.5)
   box-shadow inset 0px 3px 14px 1px rgba(0,0,0,0.45)
   width 22em
+  height 20em
   margin 1em
   round 10px
   
